# rust-edf-reader

./: Cargo.toml  README.md
src/: async_reader.rs  file_reader.rs  lib.rs  model.rs  parser.rs  sync_reader.rs
tests/: integration_tests.rs  integration_tests_async.rs
